<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green">

    <TextView
        android:id="@+id/studentNameTV"
        android:text="@string/student_name"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/studentDeptNameTV"
        android:text="@string/department_name"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/regCourseTv"
            android:text="@string/registered_course"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ListView>

    </LinearLayout>

    <Button
        android:id="@+id/delectBt"
        android:text="@string/remove"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"/>

</LinearLayout>